--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
    box-sizing: border-box;
    font-family: "Inter", sans-serif;
 }
+body{
+    background-color: #F5F5F5;
+}
 .container {
   max-width: 1300px;
   margin: 0 auto;
@@ -15,6 +18,7 @@ nav{
     display: flex;
     justify-content: space-between;
      padding-top: 1em;
+     padding-bottom: 3em;
      align-items: center;
 }
 
@@ -24,10 +28,37 @@ nav{
 }
 
 .signin-btn{
-    background-color: white ;
+    background-color: #F5F5F5 ;
     border: 1px solid green;
     padding: 0.5em 1em;
     font-weight: bold;
     color: green;
     border-radius: 0.5em;
+}
+
+.section-one{
+    background-color: #C6E4D6;
+    border-radius: 2em;
+}
+.hero{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3em 0;
+    
+}
+
+.pillar-head{
+    padding: 3em 0;
+}
+.Innovation-divs{
+    display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2em;
+  padding-bottom: 4em ;
+}
+.pillar-divs{
+    background-color: white;
+    padding: 1.5em 1em;
+    border-radius: 1em;
 }
