--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,37 @@ h5{
     font-style: italic;
     color: gray;
 }
+
+th{
+    text-align: left;
+    margin: 0 1em;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+td > button{
+    padding: 0.5em 1em;
+    margin: 0.5em 1em;
+    background-color: #C6E4D6;
+    
+}
+tr > td{
+    text-align: center;
+    
+}
+tr > th{
+    padding: 1em 1em;
+}
+
+.table-head{
+    background-color: #C6E4D6;
+}
+
+.section-five{
+    padding: 2em 2em;
+    background-color: white;
+    border-radius: 1em;
+}
